# timetable

./: Cargo.toml  rustfmt.toml
res/db/: create_events_indices.sql  create_events_table.sql  create_state_enums.sql  insert_event.sql  search_events.sql  update_and_insert.sql  update_event.sql
src/: config.rs  create_table_events.sql  db.rs  event.rs  http.rs  logger.rs  main.rs  search.rs  webhook.rs
