[package]
name = "timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routerify = "3"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["color", "derive", "env", "suggestions"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7.5", features = [ "with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8" ] }
postgres-types = { version = "0.2.2", features = ["derive"] }